Fix: On iPhone X and above, the bottom menu is too low and interferes with unclickable interactive elements

--- a/themes/clean-base/less/humhub/mobile.less
+++ b/themes/clean-base/less/humhub/mobile.less
@@ -73,6 +73,7 @@
       #top-menu-nav {
         position: fixed;
         bottom: 0;
+        padding-bottom: env(safe-area-inset-bottom); // for the web view space (safe area) on iPhone X and above
         background-color: @background-color-secondary;
         border-top: solid 2px #CCC;
         width: auto;
